<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>smapserver</groupId>
	<artifactId>surveyKPI</artifactId>
	<version>1.0.1</version>
	<packaging>war</packaging>
	<properties>
		<failOnMissingWebXml>false</failOnMissingWebXml>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>11</maven.compiler.source>
    	<maven.compiler.target>11</maven.compiler.target>
	</properties>
	<build>
		<sourceDirectory>src</sourceDirectory>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<release>11</release>
				</configuration>
			</plugin>
			<plugin>
	      		<groupId>org.apache.maven.plugins</groupId>
	      		<artifactId>maven-war-plugin</artifactId>
	      		<version>3.3.1</version>
	      	</plugin>
	      	<plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>1.4.1</version>
                <configuration>
                    <rules><dependencyConvergence/></rules>
                </configuration>
            </plugin>
		</plugins>
	</build>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.amazonaws</groupId>
				<artifactId>aws-java-sdk-bom</artifactId>
				<version>1.11.745</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<dependencies>
	
	  	<dependency>
	      	<groupId>smapserver</groupId>
	      	<artifactId>amazon</artifactId>
	      	<version>1.0.0</version>
      	</dependency>
      	<dependency>
	      	<groupId>smapserver</groupId>
	      	<artifactId>sdDAL</artifactId>
	      	<version>1.0.0</version>
      	</dependency>
       	<dependency>
	      	<groupId>smapserver</groupId>
	      	<artifactId>sdDataAccess</artifactId>
	      	<version>1.0.0</version>
      	</dependency>
      	
		<!-- Non SDAL -->
        <dependency>
      		<groupId>org.slf4j</groupId>
      		<artifactId>slf4j-api</artifactId>
      		<version>1.7.25</version>
    	</dependency>
    	 <dependency>
			<groupId>net.sf.kxml</groupId>
			<artifactId>kxml2</artifactId>
			<version>2.3.0</version>
			<scope>compile</scope>
		</dependency>
    	
	</dependencies>
</project>
